--- a/index.html
+++ b/index.html
@@ -29,19 +29,12 @@
             </div>
             <div class="flex gap-4 items-center">
                 <div class="glass-panel px-3 py-1 flex items-center gap-2">
-                    <span class="text-xs text-gray-400">LEVERAGE</span>
-                    <select id="leverageSelect" class="bg-transparent text-green-400 font-bold outline-none cursor-pointer title-font">
-                        <option value="1">1x</option>
-                        <option value="5">5x</option>
-                        <option value="10">10x</option>
-                        <option value="20" selected>20x</option>
-                        <option value="50">50x</option>
-                        <option value="100">100x</option>
-                    </select>
+                    <span class="text-xs text-gray-400">LEVERAGE (AUTO)</span>
+                    <span id="autoLeverage" class="text-green-400 font-bold">AUTO</span>
                 </div>
                 <div class="glass-panel px-4 py-2 text-center min-w-[100px]">
-                    <div class="text-xs text-gray-400">Total P/L</div>
-                    <div id="totalPL" class="title-font text-green-400 font-bold tracking-widest">$0.00</div>
+                    <div class="text-xs text-gray-400">Total P/L (Win Rate)</div>
+                    <div id="totalPL" class="title-font text-green-400 font-bold tracking-widest">$0.00 (0%)</div>
                 </div>
             </div>
         </div>
@@ -86,7 +79,7 @@
         <div class="glass-panel p-4">
              <div class="text-xs text-gray-400 mb-3 flex justify-between">
                 <span>TIMEFRAME PREDICTIONS (AUTO-EXECUTE)</span>
-                <span class="text-purple-400" id="activeLeverageDisplay">20x LEV</span>
+                <span class="text-purple-400" id="activeLeverageDisplay">AUTO LEV</span>
              </div>
              <div id="predictionCards" class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-8 gap-3"></div>
         </div>
@@ -129,6 +122,14 @@
             <div class="w-16 h-16 border-4 border-purple-500/30 border-t-purple-500 rounded-full animate-spin mx-auto mb-6"></div>
             <div class="text-2xl font-bold text-white title-font tracking-widest">SYSTEM BOOT</div>
             <div class="text-xs text-green-400 mt-2 font-mono" id="loadingText">Establishing Neural Link...</div>
+        </div>
+    </div>
+
+    <div id="errorModal" class="fixed inset-0 bg-black/50 z-50 hidden flex items-center justify-center">
+        <div class="glass-panel p-6 max-w-sm text-center">
+            <h3 class="text-xl font-bold mb-4 text-red-400">System Error</h3>
+            <p id="errorText" class="text-gray-300 mb-4"></p>
+            <button onclick="el('errorModal').classList.add('hidden')" class="bg-purple-500 px-4 py-2 rounded">Close</button>
         </div>
     </div>
 
